# Agent-Core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: basic.yaml
examples/mcp_filesystem/: README.md  agent.yaml
examples/minimal_react/: agent.yaml  run_offline.py
src/agent_core/: __init__.py  agent.py  cli.py  config.py  state.py  types.py
src/agent_core/api/: __init__.py  app.py
src/agent_core/control/: __init__.py  budgets.py  policies.py  stop.py
src/agent_core/evals/: __init__.py  runner.py  schema.py
src/agent_core/llm/: __init__.py  base.py  messages.py  openai_provider.py  scripted.py
src/agent_core/loop/: __init__.py  base.py  common.py  plan_execute.py  react.py
src/agent_core/memory/: __init__.py  base.py  buffer.py  summary.py  vector.py
src/agent_core/tools/: __init__.py  base.py  mcp_adapter.py  registry.py  runtime.py
src/agent_core/tools/builtin/: __init__.py  calculator.py  files.py  http.py  time_tool.py
src/agent_core/tracing/: __init__.py  base.py  jsonl.py  redaction.py  schema.py
tests/: conftest.py  test_api.py  test_calculator.py  test_evals.py  test_files_sandbox.py  test_golden_traces.py  test_mcp_mapping.py  test_memory.py  test_plan_execute.py  test_policies.py  test_react_loop.py  test_redaction.py  test_resume.py  test_tool_runtime.py
tests/golden/: calculator_success.jsonl  deny_policy.jsonl  max_steps.jsonl  plan_execute.jsonl
