[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-core"
version = "0.1.0"
description = "Minimal tool-using agent runtime: ReAct loop, strict tool runtime, pluggable memory, JSONL traces, MCP adapter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "anyio>=4.0",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6", "fastapi>=0.115"]

[project.scripts]
agent-core = "agent_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
